--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- For Resposive Device -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="keywords" content="UAE, First stable coin, business, corporate, crypto, uae crypto, marketing, multipurpose, product, product launch, responsive, software, startup, startup landing page" />
+    <meta name="author" content="Eumla" />
     <!-- For Window Tab Color -->
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#1b1b1b">
@@ -14,7 +16,7 @@
     <meta name="msapplication-navbutton-color" content="#1b1b1b">
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#1b1b1b">
-    <title>Cryonik - Cryptocurrency Landing Page</title>
+    <title>Eumla | UAE's first stable coin</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="56x56" href="images/fav-icon/icon.png">
     <!-- Main style sheet -->
