--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="images/logo.png" alt="" class="logo">
             <h1><span class="txt-rotate" data-period="2000" data-rotate='[ "UAE’s first Stable coin.","We’r Launcing Soon!"]'></span></h1>
             <p>Subscribe & get notified</p>
-            <form action="https://formsubmit.co/kavindumadushanka90@gmail.com">
+            <form action="https://formsubmit.co/kavindumadushanka90@gmail.com" method="POST">
                 <input type="email" placeholder="Enter Your Email." required>
                 <button type="submit">Notify Me</button>
             </form>
