--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="main-body-wrapper">
             <img src="images/logo.png" alt="" class="logo">
-            <h1><span class="txt-rotate" data-period="2000" data-rotate='[ "UAE’s first Stable coin.","We’re Launcing Soon!"]'></span></h1>
+            <h1><span class="txt-rotate" data-period="2000" data-rotate='[ "UAE’s first Stable coin.","We’re Launching Soon!"]'></span></h1>
             <p>Subscribe & get notified</p>
             <form action="https://formsubmit.co/info.eumla@gmail.com" method="POST">
                 <input type="email" placeholder="Enter Your Email." required>
