--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="msapplication-navbutton-color" content="#1b1b1b">
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#1b1b1b">
-    <title>Eumla | UAE's first stable coin</title>
+    <title>Eumla | World First Decentralized Bank</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="56x56" href="images/fav-icon/icon.png">
     <!-- Main style sheet -->
@@ -35,7 +35,7 @@
 
         <div class="main-body-wrapper">
             <img src="images/logo.png" alt="" class="logo">
-            <h1><span class="txt-rotate" data-period="2000" data-rotate='[ "UAE’s first Stable coin.","We’re Launching Soon!"]'></span></h1>
+            <h1><span class="txt-rotate" data-period="2000" data-rotate='[ "World First Decentralized Bank.","Buy, Send, Hold and Spend Crypto via visa card.","We’re Launching Soon!"]'></span></h1>
             <p>Subscribe & get notified</p>
             <form action="https://formsubmit.co/info.eumla@gmail.com" method="POST">
                 <input type="email" placeholder="Enter Your Email." required>
