--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- For Resposive Device -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="UAE, First stable coin, business, corporate, crypto, uae crypto, marketing, multipurpose, product, product launch, responsive, software, startup, startup landing page" />
+    <meta name="keywords" content="World First Decentralized Bank, corporate, crypto, uae crypto, marketing, multipurpose, product, product launch, responsive, software, startup, startup landing page,crypto currency" />
     <meta name="author" content="Eumla" />
     <!-- For Window Tab Color -->
     <!-- Chrome, Firefox OS and Opera -->
