--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
                 <input type="email" placeholder="Enter Your Email." required>
                 <button type="submit">Notify Me</button>
             </form>
-		<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+		<!-- Calendly badge widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/info-eumla/30min', text: undefined, color: '#009393', textColor: '#ffffff', branding: undefined }); }</script>
+<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/info-eumla/30min', text: 'Book an appoinment', color: '#009393', textColor: '#ffffff', branding: undefined }); }</script>
 <!-- Calendly badge widget end -->
         </div>
         <!-- /.main-body-wrapper -->
