--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
                 <input type="email" placeholder="Enter Your Email." required>
                 <button type="submit">Notify Me</button>
             </form>
+		<p>Subscribe & get notified</p>
 		<!-- Calendly badge widget begin -->
 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/info-eumla/30min', text: 'Book an appoinment', color: '#009393', textColor: '#ffffff', branding: undefined }); }</script>
 <!-- Calendly badge widget end -->
         </div>
         <!-- /.main-body-wrapper -->
@@ -71,6 +70,8 @@
         <!-- Theme js -->
         <script src="js/theme.js"></script>
         <script src="js/textrotate.js"></script>
+	    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/info-eumla/30min', text: 'Book an appoinment', color: '#009393', textColor: '#ffffff', branding: undefined }); }</script>
     </div>
     <!-- /.main-page-wrapper -->
 </body>
