--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
 	   
     </div>
     <!-- /.main-page-wrapper -->
+	<!-- Calendly badge widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/info-eumla/30min', text: 'Book an Appoinment', color: '#0069ff', textColor: '#ffffff', branding: undefined }); }</script>
+<!-- Calendly badge widget end -->
 </body>
 
 </html>
