--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
         <div class='offset-0 col-12 offset-md-4 col-md-8 content'>
           <div class="content-block ">
             
-    <h1 class="headline large ">Introducing Eumla <br>Buy, send, spend and hold crypto.</h1>
+    <h1 class="headline large ">Introducing Eumla <br>Buy, send, spend and stake crypto.</h1>
 <p class="large ">Empower the next generation the smart way.</p>	
 	<a href="contact-us/index.html " class="link-element default ">
 		<div class="circle ">
