--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@ src="https://www.youtube.com/embed/tgbNymZ7vqY ">
               <div class='col-12 col-md-6'>
                                 
     <h2 class="headline medium constrained ">Blockchain and cryptocurrency directly connect the world economy.</h2>
-<p class="medium constrained ">Green Assets Wallet is an impact tech company with a mission to re-direct capital flows towards to net zero economies. Our solution injects trust and transparency into the debt capital market ecosystem through a proven methodology and harmonized and comparable impact data.</p>	
+<p class="medium constrained ">Eumla focus on future of finance that would build upon cryptocurrencies by becoming a sustainable banking solution to empower a decentralized finance(defi) based economy. Furthermore, eumla aspires to provide all the services you require to thrive in a de-fi ecosystem where you can transfer, trade, borrow and lend cryptocurrency.</p>	
 	<a href="big-picture/index.html " class="link-element default ">
 		<div class="circle ">
 			<svg width="15 " height="14 " viewBox="0 0 15 14 " fill="none " xmlns="http://www.w3.org/2000/svg ">
