--- a/index.html
+++ b/index.html
@@ -949,8 +949,8 @@ src="https://www.youtube.com/embed/tgbNymZ7vqY ">
               <div class='col-12 offset-md-1 col-md-5'>
                                 
     <h2 class="headline medium constrained ">A global trust platform</h2>
-<p class="medium with-line ">On Green Assets Wallet issuers, investors, and validators can interact and align, while debt security impact data is reported and aggregated quickly and efficiently.</p><p class="medium with-line
-                                ">Issuers can report and communicate transition plans and impact achievements to a global market.</p><p class="medium ">Investors can access trusted and quantifiable impact data to inform allocation choices and evaluate investments.	</p>              </div>
+<p class="medium with-line ">Eumla is a Decentralized Bank that focus on building a sustainable ecosystem where customers have more control on their finances and transfer, trade, borrow and lend cryptocurrency with almost no cost from a single platform.</p><p class="medium with-line
+                                ">eumla eco-system comprises all the features of all the features that of a traditional bank for cryptocurrency, making your crypto spending and saving easier.</p> <!--<p class="medium ">Investors can access trusted and quantifiable impact data to inform allocation choices and evaluate investments.	</p>            --></div>
             </div>
 
           
