--- a/index.html
+++ b/index.html
@@ -970,8 +970,8 @@ src="https://www.youtube.com/embed/tgbNymZ7vqY ">
             <div class='row five-seven mobile-reverse   '>
               <div class='col-12 col-md-5'>
                                 
-    <h2 class="headline medium ">Access impact data: Anytime, anywhere</h2>
-<p class="medium ">We cater for issuers, investors and validators and all labelled bond instruments with an impact angle. Our solution is web-based, easy to use and accessible from anywhere. </p>	
+    <h2 class="headline medium ">Payment Gateway!</h2>
+<p class="medium ">Eumla payment gateway can give your customers the option to pay with different type of payable methods comprising Fiat and Crypto currencies in a secure, reliable and a convenient manner in a single platform.</p>	
 	<a href="product/index.html " class="link-element default ">
 		<div class="circle ">
 			<svg width="15 " height="14 " viewBox="0 0 15 14 " fill="none " xmlns="http://www.w3.org/2000/svg ">
