--- a/index.html
+++ b/index.html
@@ -1284,35 +1284,36 @@ src="https://www.youtube.com/embed/tgbNymZ7vqY ">
                                                         <div class="row chapter-row chapter-row-1 ">
                                                 <div class="col-12 col-md-12 col-lg-5 ">
                             <div class="textblock ">
-                                <h4>Access harmonised impact data</h4>
+                                <h4>Personal/Business Website Development</h4>
                                 <p>
-                                    Access robust and harmonized impact data, on all labelled securities. Our importing tool helps you match your portfolio with issuer impact data.                                 </p>
+                                    Get your own personal/business website for yourself or your business.</p>
                             </div>
                         </div>
                         <div class="md-hide col-md-1 "></div>
                                                 <div class="col-12 col-md-12 col-lg-5 ">
                             <div class="textblock ">
-                                <h4>Analyse issuers' credibility</h4>
+                                <h4>E-Commerce Websites</h4>
                                 <p>
-                                    Create and store a track record of reliable issuers. Review third-party validations and assurance reports.
+                                    Sell your products and services online with our platforms.
                                 </p>
                             </div>
                         </div>
                         <div class="md-hide col-md-1 "></div>
                                                 <div class="col-12 col-md-12 col-lg-5 ">
                             <div class="textblock ">
-                                <h4>Automate your portfolio management</h4>
+                                <h4>Enterprise Web Solutions</h4>
                                 <p>
-                                    Customize your impact portfolio and use our automated data analytics tool to assess your impact - saving you time and money.
+                                    Having a headache with your business process? We can simplify it for you with our enterprise web solutions. 
                                 </p>
                             </div>
                         </div>
                         <div class="md-hide col-md-1 "></div>
                                                 <div class="col-12 col-md-12 col-lg-5 ">
                             <div class="textblock ">
-                                <h4>Engage clients and stakeholders</h4>
+                                <h4>Customized Web Solutions</h4>
                                 <p>
-                                    Showcase your targets and impact performance to stakeholders via our impact intelligence tool or through data export.                                </p>
+                                    Get a customized solution for your various online requirements.
+				</p>
                             </div>
                         </div>
                         <div class="md-hide col-md-1 "></div>
@@ -1337,34 +1338,37 @@ src="https://www.youtube.com/embed/tgbNymZ7vqY ">
                                                         <div class="row chapter-row chapter-row-2 ">
                                                 <div class="col-12 col-md-12 col-lg-5 ">
                             <div class="textblock ">
-                                <h4>Access global bond issuers</h4>
+                                <h4>Mobile Applications</h4>
                                 <p>
-                                    Connect to bond issuers globally and expand your assurance impact.                                </p>
+                                	Our mobile-based solutions can take your business to the fingertips of your clients.
+				</p>
                             </div>
                         </div>
                         <div class="md-hide col-md-1 "></div>
                                                 <div class="col-12 col-md-12 col-lg-5 ">
                             <div class="textblock ">
-                                <h4>Accelerate digital verification</h4>
+                                <h4>Point of Sales (POS) </h4>
                                 <p>
-                                    Digitize impact data and verification processes. Verify second opinions, impact reports and project impact data online. Secure adherence to frameworks.
+                                    Make your billing process simpler.
                                 </p>
                             </div>
                         </div>
                         <div class="md-hide col-md-1 "></div>
                                                 <div class="col-12 col-md-12 col-lg-5 ">
                             <div class="textblock ">
-                                <h4>Influence capital flows toward impact</h4>
+                                <h4>Mobile Games</h4>
                                 <p>
-                                    Make verification results automatically available to stakeholders, while supporting your clients’ journey of improving impact performance.                                </p>
+                                    Get your own mobile game up in google play or apple store.
+				</p>
                             </div>
                         </div>
                         <div class="md-hide col-md-1 "></div>
                                                 <div class="col-12 col-md-12 col-lg-5 ">
                             <div class="textblock ">
-                                <h4>Own your own verification process</h4>
+                                <h4>Customized Mobile Solutions</h4>
                                 <p>
-                                    Control the use and application of your verification data and automate your impact management.                                 </p>
+                                    Get your own customized mobile solutions that suit your requirements. 
+				</p>
                             </div>
                         </div>
                         <div class="md-hide col-md-1 "></div>
