--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Intelleon | Software development company</title>
+    <title>Eumla | Software development company</title>
     <meta name="keywords" content="">
     <meta name="author" content="">
     <meta name="robots" content="index, follow">
@@ -62,15 +62,15 @@
               <div class="main-menu-item"><a class="main-menu-link anchor-link" href="#team">Leadership</a></div>
               <div class="main-menu-item contact-menu-btn mobshow"><a class="blue-btn" href="contact-us.html">Let's Talk</a></div>
               <div class="main-menu-item mobshow">
-                  <a class="main-menu-link anchor-link" href="tel:15712100571">+1 571 210 0571</a>
+                  <a class="main-menu-link anchor-link" href="tel:971509381124">+971 50 938 1124</a>
                     <br>
                     <a><span class="__cf_email__" data-cfemail="51383f202438232811383f25343d3d343e3f7f3038">[email&#160;protected]</span></a>
                 </div>
             </div>
             <div class="main-menu-item mobhide">
-                <a href="tel:+15712100571">+1 571 210 0571</a>
+                <a href="tel:+971509381124">+971 50 938 1124</a>
                 <br>
-                <a href="cdn-cgi/l/email-protection.html#e78e8996928e959ea78e8993828b8b828889c9868e"><span class="__cf_email__" data-cfemail="640d0a15110d161d240d0a10010808010b0a4a050d">[email&#160;protected]</span></a>
+                <a href="mailto:info@eumla.to"><span class="__cf_email__" >info@eumla.to</span></a>
             </div>
             <div class="main-menu-item contact-menu-btn mobhide">
                 <a class="blue-btn" href="contact-us.html">Let's Talk</a>
@@ -684,12 +684,13 @@
       <h1 class="tb-title">Thinking of applying<br> digital transformation<br> to your business?
         <p class="plate-title">We have solutions that will drive<br> you nuts</p><a class="blue-btn" href="contact-us.html">Contact Us</a>
       </h1>
-      <p class="copyright"><span>13800 Coppermine Road,<br> Herndon, VA 20171 USA<br><a href="tel:+15712100571">+1 571 210 0571</a>‬</span></p>
+      <p class="copyright"><span>DIFC, Dubai<br> UAE.<br><a href="tel:+971509381124">+971 50 938 1124</a>‬</span></p>
       <div class="tb-contacts">
         <ul class="tb-sn">
-          <li><a class="linkedin" href="https://www.linkedin.com/company/26229563/admin/" target="_blank"></a></li>
-          <li><a class="facebook" href="https://www.facebook.com/Intelleon.team/" target="_blank"></a></li>
-        </ul><a href="cdn-cgi/l/email-protection.html#a9c0c7d8dcc0dbd0e9c0c7ddccc5c5ccc6c787c8c0"><span class="__cf_email__" data-cfemail="51383f202438232811383f25343d3d343e3f7f3038">[email&#160;protected]</span></a>
+          <li><a class="linkedin" href="https://www.linkedin.com/company/eumla/" target="_blank"></a></li>
+          <li><a class="facebook" href="https://www.facebook.com/eumla.to" target="_blank"></a></li>
+          <li><a class="instagram" href="https://www.instagram.com/eumla.to/" target="_blank"></a></li>
+        </ul><a href="mailto:info@eumla.to"><span class="__cf_email__" >info@eumla.to</span></a>
       </div>
     </div>
     <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/main.js"></script>
