new update fixed

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <div class="main-menu-item mobshow">
                   <a class="main-menu-link anchor-link" href="tel:971509381124">+971 50 938 1124</a>
                     <br>
-                    <a><span class="__cf_email__" data-cfemail="51383f202438232811383f25343d3d343e3f7f3038">[email&#160;protected]</span></a>
+                    <a><span class="__cf_email__" href="mailto:info@eumla.to">info@eumla.to</span></a>
                 </div>
             </div>
             <div class="main-menu-item mobhide">
@@ -81,7 +81,7 @@
       <p>We use cookies at our websites in order to offer you the most relevant information. Please accept cookies for optimal performance.</p><span class="blue-btn accept-cookie">Accept</span>
     </div>
     <div class="block top-block">
-      <h1 class="tb-title blurap">At Intelleon we are focused<br> on Data Science and innovative<br> technologies
+      <h1 class="tb-title blurap">At Eumla we are focused<br> on Data Science and innovative<br> technologies
         <span>around mobile<br> and web development.</span>
       </h1>
       <div class="tb-contacts blurap">
