--- a/legal.html
+++ b/legal.html
@@ -37,37 +37,46 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/57098620" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-        <header class="block page-header"><a href="index.html"><img class="logo" src="img/intel-logo.svg"></a>
-          <div class="hamburger">
-            <div class="stripe stripe-1"></div>
-            <div class="stripe stripe-2"></div>
-            <div class="stripe stripe-3"></div>
-          </div>
-          <div class="main-menu">
-            <div class="menu-links">
-              <div class="main-menu-item nm"><a class="main-menu-link anchor-link" href="#services">Services</a></div>
-              <div class="main-menu-item"><a class="main-menu-link anchor-link" href="#stack">Technologies</a></div>
-              <div class="main-menu-item"><a class="main-menu-link anchor-link" href="#process">Process</a></div>
-              <div class="main-menu-item"><a class="main-menu-link anchor-link" href="#projects">Our Work</a></div>
-              <div class="main-menu-item"><a class="main-menu-link anchor-link" href="#partner">Partnership</a></div>
-              <div class="main-menu-item"><a class="main-menu-link anchor-link" href="#team">Leadership</a></div>
-              <div class="main-menu-item contact-menu-btn mobshow"><a class="blue-btn" href="contact-us.html">Let's Talk</a></div>
-              <div class="main-menu-item mobshow">
-                  <a class="main-menu-link anchor-link" href="tel:15712100571">+1 571 210 0571</a>
-                    <br>
-                    <a><span class="__cf_email__" data-cfemail="533a3d22263a212a133a3d27363f3f363c3d7d323a">[email&#160;protected]</span></a>
-                </div>
-            </div>
-            <div class="main-menu-item mobhide">
-                <a href="tel:+15712100571">+1 571 210 0571</a>
-                <br>
-                <a href="cdn-cgi/l/email-protection.html#b2dbdcc3c7dbc0cbf2dbdcc6d7deded7dddc9cd3db"><span class="__cf_email__" data-cfemail="462f2837332f343f062f2832232a2a23292868272f">[email&#160;protected]</span></a>
-            </div>
-            <div class="main-menu-item contact-menu-btn mobhide">
-                <a class="blue-btn" href="contact-us.html">Let's Talk</a>
-            </div>
-          </div>
-        </header>
+<header class="block page-header"><a href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="90" height="87.312" viewBox="0 0 217.556 87.312">
+  <g id="Group_75" data-name="Group 75" transform="translate(-4158 -4378.344)">
+      <path id="Path_267" data-name="Path 267" d="M-3164.22-1843.791l13.025,7.689-37.66,21.775v28.531l24.521,14.244,24.769-14.259v-10.152l-24.627,14.232-11.264-6.443,35.891-20.874v-5.423l-4.214-2.466-36.41,21.32v-13.651l37.717-21.824,15.839,9.154.031,43.654-37.731,21.8-37.618-21.911-.019-43.649Z" transform="translate(7359.971 6222.135)" fill="#fff"></path>
+      <path id="Exclusion_7" data-name="Exclusion 7" d="M11.748,25.491h0a17.125,17.125,0,0,1-2.386-.163,10.248,10.248,0,0,1-5.211-2.2,10.672,10.672,0,0,1-2.793-3.644A14.264,14.264,0,0,1,.024,14.557,19.575,19.575,0,0,1,.25,10.505a14.016,14.016,0,0,1,3.2-7.269A10.681,10.681,0,0,1,11.626,0h.056a10.811,10.811,0,0,1,8.2,3.194,14.39,14.39,0,0,1,3.374,7.289,19.876,19.876,0,0,1,.324,4.075H6.5a6.712,6.712,0,0,0,.4,2.4,5.116,5.116,0,0,0,3.552,3.292,6.036,6.036,0,0,0,1.634.234,6.232,6.232,0,0,0,4.876-2.739l6.619.4h0l0,.006a13.006,13.006,0,0,1-5.453,5.981A14.068,14.068,0,0,1,11.748,25.491ZM11.81,5.15A4.935,4.935,0,0,0,7.43,7.665a7.686,7.686,0,0,0-.952,2.515H17.017A6.965,6.965,0,0,0,16.237,7.7a4.757,4.757,0,0,0-4.3-2.551Z" transform="translate(4243.163 4409.68)" fill="#fff"></path>
+      <path id="Path_269" data-name="Path 269" d="M4271.25,4409.958l-.01,16.277s-.295,7.035,6.3,8.568,10.108-4.55,10.108-4.55v4.792h6.645l.015-25.086H4287.3l.043,14.821s-.19,4.631-4.778,4.55-4.361-4.55-4.361-4.55l-.066-14.821Z" fill="#fff"></path>
+      <path id="Path_270" data-name="Path 270" d="M4299.91,4409.958v25.131h6.929v-16.083a4.047,4.047,0,0,1,4.033-3.465,3.823,3.823,0,0,1,3.88,3.465v16.083h6.728v-16.083s.669-3.526,4.092-3.465a3.8,3.8,0,0,1,3.728,3.465v16.083h7.067v-17.232s-.183-6.315-6.244-7.734-9.461,4.315-9.461,4.315a7.773,7.773,0,0,0-6.789-4.48c-5.072-.232-7.354,4.48-7.354,4.48v-4.48Z" fill="#fff"></path>
+      <path id="Path_271" data-name="Path 271" d="M4341.812,4401.407l.08,33.62h6.842l.118-33.62Z" fill="#fff"></path>
+      <path id="Exclusion_6" data-name="Exclusion 6" d="M8.134,25.564c-.092,0-.185,0-.278,0A8.725,8.725,0,0,1,2.2,23.472,6.456,6.456,0,0,1,.673,21.493,10.779,10.779,0,0,1,0,18.388,9.457,9.457,0,0,1,.4,15.81a6.556,6.556,0,0,1,3.666-4.148c3.052-1.41,8.625-1.559,8.681-1.561.02,0,2.017-.075,2.678-.868s.007-2.324,0-2.339A3.547,3.547,0,0,0,14.573,6a4.568,4.568,0,0,0-2.807-.895,6.185,6.185,0,0,0-.792.053A4.193,4.193,0,0,0,8.026,6.682,2.933,2.933,0,0,0,7.463,7.9L.938,7.373h0V7.367A8.869,8.869,0,0,1,2.7,3.731,9.25,9.25,0,0,1,5.9,1.2,13.112,13.112,0,0,1,11.5,0h.218a12.717,12.717,0,0,1,5.551,1.152,9.643,9.643,0,0,1,3.256,2.534,9.508,9.508,0,0,1,1.919,3.686V25.31H15.936V21.5l0,.007a9.05,9.05,0,0,1-1.908,2.026A9.407,9.407,0,0,1,8.134,25.564Zm7.4-11.8a24.413,24.413,0,0,1-3.231.95c-1.638.345-3.61.752-3.63.756a2.209,2.209,0,0,0-1.448.783,2.986,2.986,0,0,0-.415,2.416c.358,2.121,1.742,2.438,2.536,2.438a2.676,2.676,0,0,0,.595-.062c.033,0,3.312-.384,4.694-2.184S15.54,13.8,15.535,13.766Z" transform="translate(4353.109 4409.726)" fill="#fff"></path>
+  </g>
+</svg></a>
+<div class="hamburger">
+<div class="stripe stripe-1"></div>
+<div class="stripe stripe-2"></div>
+<div class="stripe stripe-3"></div>
+</div>
+<div class="main-menu">
+<div class="menu-links">
+<div class="main-menu-item nm"><a class="main-menu-link anchor-link" href="#services">Services</a></div>
+<div class="main-menu-item"><a class="main-menu-link anchor-link" href="#stack">Technologies</a></div>
+<div class="main-menu-item"><a class="main-menu-link anchor-link" href="#process">Process</a></div>
+<div class="main-menu-item"><a class="main-menu-link anchor-link" href="#projects">Our Work</a></div>
+<div class="main-menu-item"><a class="main-menu-link anchor-link" href="#partner">Partnership</a></div>
+<div class="main-menu-item"><a class="main-menu-link anchor-link" href="#team">Leadership</a></div>
+<div class="main-menu-item contact-menu-btn mobshow"><a class="blue-btn" href="contact-us.html">Let's Talk</a></div>
+<div class="main-menu-item mobshow">
+<a class="main-menu-link anchor-link" href="tel:971509381124">+971 50 938 1124</a>
+<br>
+<a><span class="__cf_email__" href="mailto:info@eumla.to">info@eumla.to</span></a>
+</div>
+</div>
+<div class="main-menu-item mobhide">
+<a href="tel:+971509381124">+971 50 938 1124</a>
+<br>
+<a href="mailto:info@eumla.to"><span class="__cf_email__" >info@eumla.to</span></a>
+</div>
+<div class="main-menu-item contact-menu-btn mobhide">
+<a class="blue-btn" href="contact-us.html">Let's Talk</a>
+</div>
+</div>
+</header>
     <div class="legal-block">
       <div class="legal-text">
         <h1 class="huge-title">Intelleon Privacy Policy</h1>
