--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <p>We use cookies at our websites in order to offer you the most relevant information. Please accept cookies for optimal performance.</p><span class="blue-btn accept-cookie">Accept</span>
     </div>
     <div class="block top-block">
-      <h1 class="tb-title blurap">At Eumla we are focused<br> on Data Science and innovative<br> technologies
-        <span>around mobile<br> and web development.</span>
+      <h1 class="tb-title blurap">At Eumla we are focused<br> on Blockchain Technology and <br>innovative technologies
+        <span><br>around mobile and <br>web development.</span>
       </h1>
       <div class="tb-contacts blurap">
         <!--
@@ -96,7 +96,7 @@
         
         -->
         <!-- <p>Software<br> Development<br> Company</p> -->
-        <p><a href="https://www.youtube.com/watch?v=KUUwnX41IGo" target="_blank">
+        <p><a href="https://www.youtube.com/@eumla" target="_blank">
         <img src="img/watch_it.png" alt="">
         </a></p>
       </div>
@@ -115,9 +115,15 @@
     -->
     <div class="block index-plates-block" id="services">
       <div class="plate-flex-wrapper">
+        <div class="plate full blockchain-plate">
+          <div class="plate-info left-bottom white">
+            <h3 class="plate-title">Blockchain</h3>
+            <p class="plate-text">We have expert developers<br> in&nbsp;on blockchain technology<br> who can make your information<br> more secure and on&nbsp; accessible<br> with blockchain technology.</p>
+          </div>
+        </div>
         <div class="plate full data-science-plate">
           <div class="plate-info left-bottom white">
-            <h3 class="plate-title">Data Science</h3>
+            <h3 class="plate-title">Data Science</h3>  
             <p class="plate-text">We have built strong expertise<br> in&nbsp;machine learning, computer vision,<br> predictive analytics and NLP relying<br> on&nbsp;our engineering team</p>
           </div>
         </div>
