--- a/index.html
+++ b/index.html
@@ -617,12 +617,12 @@
         <div class="lead-wrapper">
           <div class="team-wrapper">
             <div class="one-team-block">
-              <h3 class="plate-title">Pavel<br> Podkorytov</h3>
+              <h3 class="plate-title">Madushanka<br> Fernando</h3>
               <p class="status">CEO</p>
             </div>
             <div class="one-team-block">
-              <h3 class="plate-title">Ruslan<br> Akhtyamov</h3>
-              <p class="status">CSO</p>
+              <h3 class="plate-title">Tharindu<br> Danushka</h3>
+              <p class="status">Head of BDM</p>
             </div>
             <div class="one-team-block">
               <h3 class="plate-title">Zakhar<br> Pichugov</h3>
