--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
           <div class="team-wrapper">
             <div class="one-team-block">
               <h3 class="plate-title">Madushanka<br> Fernando</h3>
-              <p class="status">CEO</p>
+              <p class="status">Founder & CEO</p>
             </div>
             <div class="one-team-block">
               <h3 class="plate-title">Tharindu<br> Danushka</h3>
