--- a/index.html
+++ b/index.html
@@ -690,13 +690,13 @@
       <h1 class="tb-title">Thinking of applying<br> digital transformation<br> to your business?
         <p class="plate-title">We have solutions that will drive<br> you nuts</p><a class="blue-btn" href="contact-us.html">Contact Us</a>
       </h1>
-      <p class="copyright"><span>DIFC, Dubai<br> UAE.<br><a href="tel:+971509381124">+971 50 938 1124</a>‬</span></p>
+      <p class="copyright"><span>Sri Lanka<br>Spain <br> UAE<br><a href="tel:+971509381124">+9474 076 9017</a>‬</span></p>
       <div class="tb-contacts">
         <ul class="tb-sn">
           <li><a class="linkedin" href="https://www.linkedin.com/company/eumla/" target="_blank"></a></li>
           <li><a class="facebook" href="https://www.facebook.com/eumla.to" target="_blank"></a></li>
           <li><a class="instagram" href="https://www.instagram.com/eumla.to/" target="_blank"></a></li>
-        </ul><a href="mailto:info@eumla.to"><span class="__cf_email__" >info@eumla.to</span></a>
+        </ul><a href="mailto:info@eumla.online"><span class="__cf_email__" >info@eumla.online</span></a>
       </div>
     </div>
     <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/main.js"></script>
